# tower-lsp

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
examples/: custom_notification.rs  stdio.rs  tcp.rs  websocket.rs
src/: codec.rs  jsonrpc.rs  lib.rs  rpc.rs  server.rs  service.rs  transport.rs  uri_ext.rs
src/jsonrpc/: error.rs  request.rs  response.rs  router.rs
src/service/: client.rs  layers.rs
src/service/client/: pending.rs
tower-lsp-macros/src/: lib.rs
tower-lsp-server-macros/: Cargo.toml
tower-lsp-server-macros/src/: lib.rs
