[package]
name = "tower-lsp-server"
version = "0.21.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2021"
description = "Language Server Protocol implementation based on Tower"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tower-lsp-community/tower-lsp-server"
repository = "https://github.com/tower-lsp-community/tower-lsp-server"
documentation = "https://docs.rs/tower-lsp-server/"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["language-server", "lsp", "tower"]
exclude = ["FEATURES.md"]
rust-version = "1.70"

[features]
default = ["runtime-tokio"]
runtime-agnostic = ["async-codec-lite"]
runtime-tokio = ["tokio", "tokio-util"]
proposed = ["lsp-types/proposed"]

[dependencies]
tower-lsp-server-macros = { version = "0.9", path = "./tower-lsp-server-macros" }

async-codec-lite = { version = "0.0", optional = true }
async-trait = "0.1"
auto_impl = "1"
bytes = "1"
dashmap = "6"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
httparse = "1"
lsp-types = "0.97"
memchr = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
tokio = { version = "1", optional = true }
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = "0.1"

[dev-dependencies]
async-tungstenite = { version = "0.28", features = ["tokio-runtime"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1", features = ["io-util", "io-std", "macros", "rt-multi-thread", "time"] }
tracing-subscriber = "0.3"
ws_stream_tungstenite = { version = "0.14", features = ["tokio_io"] }

[workspace]
members = [".", "./tower-lsp-server-macros"]
default-members = ["."]
