[package]
name = "tower-lsp-server-macros"
version = "0.9.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Internal procedural macros for tower-lsp-server"
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tower-lsp-community/tower-lsp-server"
repository = "https://github.com/tower-lsp-community/tower-lsp-server"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
